--- a/modules/picom.conf
+++ b/modules/picom.conf
@@ -17,10 +17,10 @@ log-level = "warn";
 
 # Shadow Settings - Enhanced for a more subtle effect
 shadow = true;
-shadow-radius = 15;
-shadow-offset-x = -15;
-shadow-offset-y = -15;
-shadow-opacity = 0.75;
+shadow-radius = 12;
+shadow-offset-x = -12;
+shadow-offset-y = -12;
+shadow-opacity = 0.6;
 shadow-color = "#000000";
 shadow-exclude = [
   "name = 'Notification'",
@@ -28,6 +28,10 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'Firefox' && argb",
   "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'firefox' && window_type = 'utility'",
+  "class_g = 'firefox' && window_type = 'popup_menu'",
+  "class_g = 'firefox' && window_type = 'menu'",
+  "class_g = 'firefox' && window_type = 'dropdown_menu'",
   "window_type = 'menu'",
   "window_type = 'dropdown_menu'",
   "window_type = 'popup_menu'",
@@ -107,14 +111,24 @@ wintypes:
   };
   dnd = { shadow = false; };
   popup_menu = { 
-    opacity = 0.9;
+    opacity = 0.95;
+    shadow = false;
     blur-background = true;
     corner-radius = 8;
+    animation-stiffness = 300.0;
+    animation-dampening = 22.0;
   };
   dropdown_menu = { 
-    opacity = 0.9;
+    opacity = 0.95;
+    shadow = false;
     blur-background = true;
     corner-radius = 8;
+    animation-stiffness = 300.0;
+    animation-dampening = 22.0;
+  };
+  menu = {
+    shadow = false;
+    opacity = 0.95;
   };
   notification = {
     shadow = true;
