--- a/modules/picom.conf
+++ b/modules/picom.conf
@@ -36,7 +36,12 @@ shadow-exclude = [
   "window_type = 'dropdown_menu'",
   "window_type = 'popup_menu'",
   "window_type = 'tooltip'",
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "class_g = 'awesome'",
+  "class_g = 'Awesome' && window_type = 'menu'",
+  "name = 'Awesome WM'",
+  "name = 'awesome'",
+  "name *= 'AwesomeWM'"
 ];
 
 # Fading Settings - Smoother transitions
@@ -129,9 +134,22 @@ wintypes:
   menu = {
     shadow = false;
     opacity = 0.95;
+    corner-radius = 8;
+    animation-stiffness = 300.0;
+    animation-dampening = 22.0;
   };
   notification = {
     shadow = true;
+    blur-background = true;
+    corner-radius = 8;
+  };
+  
+  # Specific rule for AwesomeWM right-click menu
+  unknown = {
+    shadow = false;
+    fade = true;
+    opacity = 0.95;
+    focus = true;
     blur-background = true;
     corner-radius = 8;
   };
