--- a/modules/picom.conf
+++ b/modules/picom.conf
@@ -8,6 +8,8 @@ mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
+detect-transient = true; # Better dialog handling
+detect-client-leader = true; # Group windows properly
 refresh-rate = 0; # Let picom detect the refresh rate
 xrender-sync-fence = true;
 glx-no-stencil = true;
@@ -120,23 +122,17 @@ wintypes:
     shadow = false;
     blur-background = true;
     corner-radius = 8;
-    animation-stiffness = 300.0;
-    animation-dampening = 22.0;
   };
   dropdown_menu = { 
     opacity = 0.95;
     shadow = false;
     blur-background = true;
     corner-radius = 8;
-    animation-stiffness = 300.0;
-    animation-dampening = 22.0;
   };
   menu = {
     shadow = false;
     opacity = 0.95;
     corner-radius = 8;
-    animation-stiffness = 300.0;
-    animation-dampening = 22.0;
   };
   notification = {
     shadow = true;
